allow macros in the URI for classpath